Add peg.js as a development dependency
We generate the parser using the pegjs command line tool, so we no
longer need the minified pegjs source.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "jstest": "^1.0.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "pegjs": "^0.8.0"
+  },
   "author": "Chris Lowis",
   "license": "MIT"
 }
