Add a test script to the package
Makes it easier to run the tests with `npm test`

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "pegjs": "^0.8.0"
   },
+  "scripts": {
+    "test": "node test.js",
+  },
   "author": "Chris Lowis",
   "license": "MIT"
 }
